--- a/views/layout/footer.html
+++ b/views/layout/footer.html
@@ -26,18 +26,18 @@
 
 		<!-- basic scripts -->
 
-		<!--[if !IE]> -->
+		<!--[if !IE]-->
 		<script type="text/javascript">
 			window.jQuery || document.write("<script src='/static/ace1.3.1/js/jquery.min.js'>"+"<"+"/script>");
 		</script>
-
-		<!-- <![endif]-->
+		<!--[endif]-->
 
 		<!--[if IE]>
-<script type="text/javascript">
- window.jQuery || document.write("<script src='/static/ace1.3.1/js/jquery1x.min.js'>"+"<"+"/script>");
-</script>
-<![endif]-->
+		<script type="text/javascript">
+		 window.jQuery || document.write("<script src='/static/ace1.3.1/js/jquery1x.min.js'>"+"<"+"/script>");
+		</script>
+		<![endif]-->
+		
 		<script type="text/javascript">
 			if('ontouchstart' in document.documentElement) document.write("<script src='/static/ace1.3.1/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 		</script>
