--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -28,6 +28,8 @@
 	<link rel="stylesheet" href="/static/ace1.3.1/css/ace-ie.min.css" />
 	<![endif]-->
 
+	<link rel="stylesheet" href="/static/css/main.css" />
+
 	<!-- inline styles related to this page -->
 
 	<!-- ace settings handler -->
