--- a/views/organization/list.html
+++ b/views/organization/list.html
@@ -199,7 +199,7 @@
 							<span aria-hidden="true">&times;</span>
 							<span class="sr-only">关闭</span>
 						</button>
-						<h4 class="modal-title">新增组织机构</h4>
+						<h4 class="modal-title">编辑组织机构</h4>
 					</div>
 					<div class="modal-body">
 						<form id="modify_organization_form" role="form" class="form-horizontal">
@@ -229,7 +229,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-						<button type="button" class="btn btn-primary" id="modifyButton">修改</button>
+						<button type="button" class="btn btn-primary" id="modifyButton">确认</button>
 					</div>
 				</div>
 				<!-- /.modal-content -->
@@ -463,7 +463,7 @@
 				"show":false,
 			});
 			$('#modify').on('click',function(e){
-				console.log($('#organization_tree').tree('selectedItems'));
+				//console.log($('#organization_tree').tree('selectedItems'));
 				if($('#organization_tree').tree('selectedItems').length!=1){
 					alert('必须选择要修改的组织机构，而且只能选择一个组织机构！');
 					return false;
