--- a/views/login/login.html
+++ b/views/login/login.html
@@ -1,143 +1,324 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh">
 <head>
-	<meta charset="utf-8">
-	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	-->
-	<title>{$ .SiteName $} - 登录</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	{{template "layout/header.html" .}}
+</head>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<body class="login-layout">
 
-	<!-- Basic Styles -->
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/font-awesome.min.css">
+	<div class="main-container">
+		<div class="main-content">
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+					<div class="login-container">
+						<div class="center">
+							<h1> <i class="ace-icon fa fa-leaf green"></i>
+								<span class="white" id="id-text2">{{ .SiteName }}</span>
+							</h1>
+						</div>
 
-	<!-- fuelux styles -->
-	<link href="/static/fuelux/2.6.1/css/fuelux.min.css" rel="stylesheet" type="text/css">
-	<link href="/static/fuelux/2.6.1/css/fuelux-responsive.min.css" rel="stylesheet" type="text/css">
+						<div class="space-6"></div>
 
-	<!-- ng-grid css -->
-	<!-- <link rel="stylesheet" type="text/css" media="screen" href="/static/js/plugin/ng-grid/ng-grid.min.css">
-	-->
-	<!-- my own css -->
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/style.css">
+						<div class="position-relative">
+							<div id="login-box" class="login-box visible widget-box no-border">
+								<div class="widget-body">
+									<div class="widget-main">
+										<h4 class="header blue lighter bigger"> <i class="ace-icon fa fa-coffee green"></i>
+											请输入用户信息
+										</h4>
 
-	<!-- FAVICONS -->
-	<!-- <link rel="shortcut icon" href="/static/smart/img/favicon/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/static/smart/img/favicon/favicon.ico" type="image/x-icon">
-	-->
-	<!-- GOOGLE FONT -->
-	<!-- <link rel="stylesheet" href="http://fonts.useso.com/css?family=Open+Sans:400italic, 700italic, 300, 400, 700">
-	-->
-	<!-- iOS web-app metas:hides Safari UI Components and Changes Status Bar Appearance -->
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black"></head>
-<body>
-	<div class="container">
+										<div class="space-6"></div>
 
-		<div class="loginBox">
-			<form action="/login" method="post" id="login-form" role="form">
-				<h2>登录</h2>
+										<form id="login-form" name="login-form">
+											<fieldset>
+												<label class="block clearfix">
+													<span class="block input-icon input-icon-right">
+														<input type="text" class="form-control" id="username" name="username" placeholder="用户名" autofocus />
+														<i class="ace-icon fa fa-user"></i>
+													</span>
+												</label>
 
-				<fieldset>
+												<label class="block clearfix">
+													<span class="block input-icon input-icon-right">
+														<input type="password" class="form-control"id="password" name="password" placeholder="密码" />
+														<i class="ace-icon fa fa-lock"></i>
+													</span>
+												</label>
 
-					<div class="form-group">
-						<label>用户名
-						<i class="fa fa-user"></i>
-						<input type="text" class="form-control" name="UserName" placeholder="用户名" autofocus>
-						</label>
+												<div class="space"></div>
+
+												<div class="clearfix">
+													<!-- <label class="inline">
+														<input type="checkbox" class="ace" id="rememberme" name="rememberme" />
+														<span class="lbl">30天内免登录</span>
+													</label> -->
+
+													<button type="button" id="loginBtn" class="width-35 pull-right btn btn-sm btn-primary">
+														<i class="ace-icon fa fa-key"></i>
+														<span class="bigger-110">登录</span>
+													</button>
+												</div>
+
+												<div class="space-4"></div>
+											</fieldset>
+										</form>
+
+									</div>
+									<!-- /.widget-main -->
+
+									<!-- <div class="toolbar clearfix">
+									<div>
+										<a href="#" data-target="#forgot-box" class="forgot-password-link">
+											<i class="ace-icon fa fa-arrow-left"></i>
+											找回密码
+										</a>
+									</div>
+
+									<div>
+										<a href="#" data-target="#signup-box" class="user-signup-link">
+											现在注册
+											<i class="ace-icon fa fa-arrow-right"></i>
+										</a>
+									</div>
+								</div>
+								-->
+							</div>
+							<!-- /.widget-body -->
+						</div>
+						<!-- /.login-box -->
+
+						<!-- <div id="forgot-box" class="forgot-box widget-box no-border">
+						<div class="widget-body">
+							<div class="widget-main">
+								<h4 class="header red lighter bigger">
+									<i class="ace-icon fa fa-key"></i>
+									Retrieve Password
+								</h4>
+
+								<div class="space-6"></div>
+								<p>Enter your email and to receive instructions</p>
+
+								<form>
+									<fieldset>
+										<label class="block clearfix">
+											<span class="block input-icon input-icon-right">
+												<input type="email" class="form-control" placeholder="Email" />
+												<i class="ace-icon fa fa-envelope"></i>
+											</span>
+										</label>
+
+										<div class="clearfix">
+											<button type="button" class="width-35 pull-right btn btn-sm btn-danger">
+												<i class="ace-icon fa fa-lightbulb-o"></i>
+												<span class="bigger-110">Send Me!</span>
+											</button>
+										</div>
+									</fieldset>
+								</form>
+							</div>
+							-->
+							<!-- /.widget-main -->
+
+							<!-- <div class="toolbar center">
+							<a href="#" data-target="#login-box" class="back-to-login-link">
+								Back to login
+								<i class="ace-icon fa fa-arrow-right"></i>
+							</a>
+						</div>
 					</div>
+					-->
+					<!-- /.widget-body -->
+					<!-- </div>
+					-->
+					<!-- /.forgot-box -->
 
-					<section class="form-group">
-						<label>密码
-						<i class="fa fa-lock"></i>
-						<input type="password" class="form-control" name="PassWord" placeholder="密码">
-						</label>
-					</section>
+					<!-- <div id="signup-box" class="signup-box widget-box no-border">
+					<div class="widget-body">
+						<div class="widget-main">
+							<h4 class="header green lighter bigger">
+								<i class="ace-icon fa fa-users blue"></i>
+								New User Registration
+							</h4>
 
-					<section class="form-group">
-						<input type="checkbox" name="remember" checked="">
-						记住密码
-					</section>
-				</fieldset>
-				<footer>
-					<button type="submit" class="btn btn-primary pull-right">登录</button>
-				</footer>
-			</form>
+							<div class="space-6"></div>
+							<p>Enter your details to begin:</p>
+
+							<form>
+								<fieldset>
+									<label class="block clearfix">
+										<span class="block input-icon input-icon-right">
+											<input type="email" class="form-control" placeholder="Email" />
+											<i class="ace-icon fa fa-envelope"></i>
+										</span>
+									</label>
+
+									<label class="block clearfix">
+										<span class="block input-icon input-icon-right">
+											<input type="text" class="form-control" placeholder="Username" />
+											<i class="ace-icon fa fa-user"></i>
+										</span>
+									</label>
+
+									<label class="block clearfix">
+										<span class="block input-icon input-icon-right">
+											<input type="password" class="form-control" placeholder="Password" />
+											<i class="ace-icon fa fa-lock"></i>
+										</span>
+									</label>
+
+									<label class="block clearfix">
+										<span class="block input-icon input-icon-right">
+											<input type="password" class="form-control" placeholder="Repeat password" />
+											<i class="ace-icon fa fa-retweet"></i>
+										</span>
+									</label>
+
+									<label class="block">
+										<input type="checkbox" class="ace" />
+										<span class="lbl">
+											I accept the
+											<a href="#">User Agreement</a>
+										</span>
+									</label>
+
+									<div class="space-24"></div>
+
+									<div class="clearfix">
+										<button type="reset" class="width-30 pull-left btn btn-sm">
+											<i class="ace-icon fa fa-refresh"></i>
+											<span class="bigger-110">Reset</span>
+										</button>
+
+										<button type="button" class="width-65 pull-right btn btn-sm btn-success">
+											<span class="bigger-110">Register</span>
+
+											<i class="ace-icon fa fa-arrow-right icon-on-right"></i>
+										</button>
+									</div>
+								</fieldset>
+							</form>
+						</div>
+
+						<div class="toolbar center">
+							<a href="#" data-target="#login-box" class="back-to-login-link">
+								<i class="ace-icon fa fa-arrow-left"></i>
+								Back to login
+							</a>
+						</div>
+					</div>
+					-->
+					<!-- /.widget-body -->
+					<!-- </div>
+					-->
+					<!-- /.signup-box -->
+				</div>
+				<!-- /.position-relative -->
+
+				<div class="navbar-fixed-top align-right">
+					<br />
+					&nbsp;
+					<a id="btn-login-dark" href="#">黑色</a>
+					&nbsp;
+					<span class="blue">/</span>
+					&nbsp;
+					<a id="btn-login-blur" href="#">模糊</a>
+					&nbsp;
+					<span class="blue">/</span>
+					&nbsp;
+					<a id="btn-login-light" href="#">亮色</a>
+					&nbsp; &nbsp; &nbsp;
+				</div>
+			</div>
 		</div>
-
-		<!-- /loginBox -->
+		<!-- /.col -->
+		<!-- /.row -->
 	</div>
-	<!-- /container -->
 
-	<!--================================================== -->
+<!-- /.main-container -->
 
-	<!-- PACE LOADER - turn this on if you want ajax loading to show (caution:uses lots of memory on iDevices)
-<script data-pace-options=' {
-	"restartOnRequestAfter":true
-}
-' src="/static/smart/js/plugin/pace/pace.min.js"></script>
--->
-<!-- Link to Google CDN's jQuery + jQueryUI;
-fall back to local -->
-<!--script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js">
-</script-->
-<script>
-if (!window.jQuery) {
-	document.write('<script src="/static/js/libs/jquery-2.0.2.min.js"><\/script>
-');
-}
+<!-- /login-layout -->
+
+{{template "layout/footer.html" .}}
+<!-- inline scripts related to this page -->
+<script type="text/javascript">
+	$(function($) {
+		//回车触发#loginBtn click事件
+		$('#login-form').keyup(function(event){
+  			if($('#login-form #username').val()!='' && $('#login-form #password').val()!='' && event.keyCode ==13){
+    			$("#loginBtn").trigger("click");
+  			}
+		});
+
+		$('#loginBtn').on('click',function(e){
+				//console.log($('#add-organization-form')[0]['SortRank'].value);
+				//console.log($('#organization').select('selectedItem').value);
+				//console.log($('#add-organization-form').serialize()+"&pid="+$('#organization').select('selectedItem').value);
+				if($('#login-form #username').val()==''){
+					alert('用户名不能为空！');
+					return false;
+				}
+				if($('#login-form #password').val()==''){
+					alert('密码不能为空！');
+					return false;
+				}
+
+				$.ajax({
+					type:"post",
+					dataType:"json",
+					url:"/api/login",
+					data:$('#login-form').serialize(),
+					complete:function(){},
+					success:function(msg){
+						if(msg.Success==true){
+							// alert(msg.Msg);
+							window.location="/";
+						}else{
+							//$('#login-form #username').val('');
+							$('#login-form #password').val('');
+							$('#login-form #password').focus();
+							alert(msg.Msg);
+						}
+						//$('#organization').select();
+					}
+				});
+			});
+
+	 // $(document).on('click', '.toolbar a[data-target]', function(e) {
+		// e.preventDefault();
+		// var target = $(this).data('target');
+		// $('.widget-box.visible').removeClass('visible');//hide others
+		// $(target).addClass('visible');//show target
+	 // });
+	});
+	
+	
+	
+	//you don't need this, just used for changing background
+	$(function($) {
+	 $('#btn-login-dark').on('click', function(e) {
+		$('body').attr('class', 'login-layout');
+		$('#id-text2').attr('class', 'white');
+		// $('#id-company-text').attr('class', 'blue');
+		
+		e.preventDefault();
+	 });
+	 $('#btn-login-light').on('click', function(e) {
+		$('body').attr('class', 'login-layout light-login');
+		$('#id-text2').attr('class', 'grey');
+		// $('#id-company-text').attr('class', 'blue');
+		
+		e.preventDefault();
+	 });
+	 $('#btn-login-blur').on('click', function(e) {
+		$('body').attr('class', 'login-layout blur-login');
+		$('#id-text2').attr('class', 'white');
+		// $('#id-company-text').attr('class', 'light-blue');
+		
+		e.preventDefault();
+	 });
+	 
+	});
 </script>
-
-<!--script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js">
-</script-->
-<script>
-if (!window.jQuery.ui) {
-	document.write('<script src="/static/js/libs/jquery-ui-1.10.3.min.js"><\/script>
-');
-}
-</script>
-
-<!-- MAIN APP JS FILE -->
-<script src="/static/js/app.config.js"></script>
-
-<!-- JS TOUCH:include this plugin for mobile drag / drop touch events-->
-<script src="/static/js/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script>
-
-<!-- BOOTSTRAP JS -->
-<!--script src="/static/js/bootstrap/bootstrap.min.js">
-</script-->
-
-<!-- fuelux js  if use this dont load bootstrap.min.js -->
-<script src="/static/fuelux/2.6.1/loader.min.js" type="text/javascript"></script>
-
-<!-- browser msie issue fix -->
-<script src="/static/js/plugin/msie-fix/jquery.mb.browser.min.js"></script>
-
-<!--[if IE 8]>
-<h1>
-Your browser is out of date, please update your browser by going to www.microsoft.com/download
-</h1>
-<![endif]-->
-
-<!-- AngularJS -->
-<!--
-<script src="/static/js/libs/angular/angular.js"></script>
-<script src="/static/js/libs/angular/angular-route.js"></script>
-<script src="/static/js/libs/angular/angular-animate.js"></script>
-<script src="/static/js/libs/angular/ui-bootstrap-custom-tpls-0.11.0.js"></script>
--->
-<!-- MAIN APP JS FILE -->
-<script src="/static/js/app.js"></script>
-
-<!-- MAIN ANGULAR JS FILE -->
-<!--
-<script src="/static/js/ng/ng.app.js"></script>
-<script src="/static/js/ng/ng.controllers.js"></script>
-<script src="/static/js/ng/ng.directives.js"></script>
--->
 </body>
 
 </html>
