--- a/views/layout/sidebar.html
+++ b/views/layout/sidebar.html
@@ -45,7 +45,7 @@
 		</li>
 
 		<li class="{{if .isSurveys}}active{{end}}">
-			<a href="/surveys">
+			<a href="/surveys/1">
 				<i class="menu-icon fa fa-pencil-square-o"></i>
 				<span class="menu-text">信息化达标率调研</span>
 			</a> <b class="arrow"></b>
