--- a/views/layout/sidebar.html
+++ b/views/layout/sidebar.html
@@ -79,14 +79,54 @@
 					<b class="arrow"></b>
 				</li>
 
-				<li class="{{if .isReports}}active{{end}}">
-					<a href="/reports">
-						<i class="menu-icon fa fa-bar-chart"></i>
-						报表
+			</ul>
+		</li>
+
+		<li class="{{if .isReportAdmin}}active open{{end}}">
+			<a href="#" class="dropdown-toggle">
+				<i class="menu-icon fa fa-bar-chart"></i>
+				<span class="menu-text">报表管理</span> <b class="arrow fa fa-angle-down"></b>
+			</a>
+
+			<b class="arrow"></b>
+
+			<ul class="submenu">
+				<li class="{{if .isReportMake}}active{{end}}">
+					<a href="/reports/make">
+						<i class="menu-icon fa fa-cubes"></i>
+						生成报表数据
 					</a>
 
 					<b class="arrow"></b>
 				</li>
+
+				<li class="{{if .isReportCity}}active{{end}}">
+					<a href="/reports/city">
+						<i class="menu-icon fa fa-line-chart"></i>
+						市级报表
+					</a>
+
+					<b class="arrow"></b>
+				</li>
+
+				<li class="{{if .isReportArea}}active{{end}}">
+					<a href="/reports/area">
+						<i class="menu-icon fa fa-line-chart"></i>
+						区级报表
+					</a>
+
+					<b class="arrow"></b>
+				</li>
+
+				<li class="{{if .isReportSchool}}active{{end}}">
+					<a href="/reports/school">
+						<i class="menu-icon fa fa-line-chart"></i>
+						校级报表
+					</a>
+
+					<b class="arrow"></b>
+				</li>
+
 			</ul>
 		</li>
 		{{end}}
